fix overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -562,6 +562,7 @@ h3 {
         overscroll-behavior: auto;
         height: auto;
         overflow: scroll;
+        overflow-x: hidden;
     }
 
     .intro {
